# rmanifest-analyzer

./: .gitignore  Cargo.toml  analyze_results.py  dl_mainfests.py  validate_acces_data.py
src/: main.rs  schema_generated.rs
