[package]
name = "manifest_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"

flatbuffers = "25.12.19"
hashbrown = "0.16.1"
memmap2 = "0.9.10"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = {version="1.0.228",features = ["derive"]}
zstd = "0.13.3"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
debug = true